<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_round_grey_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/gokada_super_app_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/gokada_super_app_guideline" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gokada_logo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
            app:rippleColor="@android:color/darker_gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="#EFFDFA"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            style="@style/GokadaSuperAppText"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/your_g_wallet"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            style="@style/GokadaSuperAppText.Header"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="₦1,000.00"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/materialCardView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_g_wallet"
            style="@style/GokadaMaterialButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="10dp"
            android:text="@string/set_up_g_wallet"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:rippleColor="@android:color/darker_gray"
            app:strokeColor="#AAABAB" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:srcCompat="@drawable/ic_wallet_filled_money_tool" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/services_card"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/gokada_card_higher_elevation"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/GokadaSuperAppText"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/services"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/services"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:listitem="@layout/layout_services_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:rippleColor="@color/colorPrimary"
            app:srcCompat="@drawable/ic_services"
            app:tint="@android:color/white" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@android:color/white"
            app:cardElevation="@dimen/gokada_home_card_higher_elevation"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/services_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/GokadaSuperAppText"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/your_ride_history_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ride_history"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/start_a_ride"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_a_ride"
                    style="@style/GokadaMaterialButton"
                    android:layout_width="0dp"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_marginBottom="24dp"
                    android:text="@string/start_a_ride"
                    android:textColor="@color/colorPrimary"
                    app:icon="@drawable/ic_motorcycle"
                    app:iconGravity="textStart"
                    app:iconPadding="@dimen/gokada_super_app_padding"
                    app:iconTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ride_history"
                    app:layout_constraintStart_toStartOf="@+id/ride_history"
                    app:rippleColor="@android:color/darker_gray"
                    app:strokeColor="@color/colorPrimary" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>